--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,14 @@
         "main.h": "c",
         "metaspr.h": "c",
         "tonc.h": "c",
-        "memory.h": "c"
+        "memory.h": "c",
+        "optional": "c",
+        "system_error": "c",
+        "array": "c",
+        "functional": "c",
+        "tuple": "c",
+        "type_traits": "c",
+        "utility": "c",
+        "string_view": "c"
     }
 }
