--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,10 @@
         "tuple": "c",
         "type_traits": "c",
         "utility": "c",
-        "string_view": "c"
+        "string_view": "c",
+        "chr.h": "c",
+        "player.h": "c",
+        "collision.h": "c",
+        "cantletgo.h": "c"
     }
 }
