Separate screen loading routines into a separate file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "cube.png.h": "c",
         "stereomadness.h": "c",
         "includes.h": "c",
-        "stereomadness_l1.h": "c"
+        "stereomadness_l1.h": "c",
+        "decompression.h": "c"
     }
 }
