--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,9 @@
         "stereomadness.h": "c",
         "includes.h": "c",
         "stereomadness_l1.h": "c",
-        "decompression.h": "c"
+        "decompression.h": "c",
+        "sprite_loading.h": "c",
+        "stereomadness_l2.h": "c",
+        "levels.h": "c"
     }
 }
