Add the rest of color triggers + unhardcode level defines

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "levels.h": "c",
         "typeinfo": "c",
         "compare": "c",
-        "cstdint": "c"
+        "cstdint": "c",
+        "l2.h": "c"
     }
 }
