--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,5 @@ jobs:
       - name: Publish build to GH Actions
         uses: actions/upload-artifact@v4
         with:
-          path: out
+          path: build
           name: famidash-adv
