--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,10 @@ jobs:
       - name: Make application
         run: |
           make
+      - name: Prepare for build publishing
+        run: |
+          mkdir -p out/rom
+          cp build/famidash-adv.gba out/rom
       - name: Publish build to GH Actions
         uses: actions/upload-artifact@v4
         with:
