--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,9 @@ jobs:
       - name: Prepare for build publishing
         run: |
           mkdir -p out/rom
-          cp build/famidash-adv.gba out/rom
+          cp build/famidash_adv.gba out/rom
       - name: Publish build to GH Actions
         uses: actions/upload-artifact@v4
         with:
-          path: build
+          path: out/rom
           name: famidash-adv
