Add to color triggers attributes to copy colors from other channels

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,8 @@
         "l2.h": "c",
         "soundbank.h": "c",
         "maxmod.h": "c",
-        "soundbank.bin.h": "c"
+        "soundbank.bin.h": "c",
+        "sprite_routines.h": "c",
+        "metatiles.h": "c"
     },
 }
