Add song attribute

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
         "sprite_routines.h": "c",
         "metatiles.h": "c",
         "pusab.h": "c",
-        "posprintf.h": "c"
+        "posprintf.h": "c",
+        "tonc_tte.h": "c"
     },
 }
