Make camera lock for ship and ball

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,7 +38,8 @@
         "metatiles.h": "c",
         "pusab.h": "c",
         "posprintf.h": "c",
-        "tonc_tte.h": "c"
+        "tonc_tte.h": "c",
+        "level_routines.h": "c"
     },
     "C_Cpp.default.cStandard": "c99",
     "C_Cpp.errorSquiggles": "disabled",
