--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container: devkitpro/devkitarm
-    name: Build with Docker using devkitARM
+    name: Compile ROM
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
