--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,7 +46,8 @@
         "string": "c",
         "initializer_list": "c",
         "color.h": "c",
-        "mgba_log.h": "c"
+        "mgba_log.h": "c",
+        "physics_defines.h": "c"
     },
     "C_Cpp.default.cStandard": "c99",
     "C_Cpp.errorSquiggles": "disabled",
