Add make levels to github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
           submodules: recursive
       - name: Make application
         run: |
+          make levels
           make
       - name: Prepare for build publishing
         run: |
