--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,7 +47,8 @@
         "initializer_list": "c",
         "color.h": "c",
         "mgba_log.h": "c",
-        "physics_defines.h": "c"
+        "physics_defines.h": "c",
+        "string.h": "c"
     },
     "C_Cpp.default.cStandard": "c99",
     "C_Cpp.errorSquiggles": "disabled",
