Added sram and more menu info

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,7 +48,8 @@
         "color.h": "c",
         "mgba_log.h": "c",
         "physics_defines.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "save.h": "c"
     },
     "C_Cpp.default.cStandard": "c99",
     "C_Cpp.errorSquiggles": "disabled",
