--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,7 +49,8 @@
         "mgba_log.h": "c",
         "physics_defines.h": "c",
         "string.h": "c",
-        "save.h": "c"
+        "save.h": "c",
+        "gba_sram.h": "c"
     },
     "C_Cpp.default.cStandard": "c99",
     "C_Cpp.errorSquiggles": "disabled",
