--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,7 +51,8 @@
         "string.h": "c",
         "save.h": "c",
         "gba_sram.h": "c",
-        "stdbool.h": "c"
+        "stdbool.h": "c",
+        "sound_test.h": "c"
     },
     "C_Cpp.default.cStandard": "c99",
     "C_Cpp.errorSquiggles": "disabled",
